Bug 124781 - Formatting issue in PPTX exported presentation
Summary: Formatting issue in PPTX exported presentation
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4 all versions
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.3.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Characters
  Show dependency treegraph
 
Reported: 2019-04-16 21:13 UTC by Christian
Modified: 2021-12-01 08:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
tc5.odp (32.04 KB, application/vnd.oasis.opendocument.presentation)
2019-04-16 21:13 UTC, Christian
Details
Very simple reproducer document (11.72 KB, application/vnd.oasis.opendocument.presentation)
2021-01-19 14:02 UTC, NISZ LibreOffice Team
Details
The reproducer document saved as PPTX (20.57 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-01-19 14:03 UTC, NISZ LibreOffice Team
Details
The superscript characters properties in Impress and PP 2013 (112.16 KB, image/png)
2021-01-19 14:07 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christian 2019-04-16 21:13:22 UTC
Description:
1. The superscripted "th" in the Title 25th April shows up wrong in PowerPoint
2. The distance from the bullet marker to the text is too large in Power point for the auto-sized bullets
3. Also in the exported version a copyright text shows up in the upper right corner that does not show up in the ODP original
4. MS Power Point complains that it needs to repair the file when opening.

Note: At some point this Document was imported from PowerPoint, perhaps some bad data structures are inherited from that time.

Steps to Reproduce:
1. Open the Testcase ODP file
2. Save is as PowerPoint PPTX 
3. Open the PPTX in MS power Point and see the described discrepancies

Actual Results:
See description

Expected Results:
Either the same data should show up in LO or it should not show up in the export PPTX as well.
Also the distance of the text to the bullet points should be consistent.
The superscripted "th" should be consistent.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Christian 2019-04-16 21:13:47 UTC
Created attachment 150804 [details]
tc5.odp

Testcase
Comment 2 Xisco Faulí 2019-04-17 16:04:15 UTC
which version of MSO Powerpoint are you using ? I get a problem with content in MSO Powerpoint 2010...
Comment 3 mulla.tasanim 2019-04-18 17:56:52 UTC
when I am opening PPTX in MS Powerpoint,it shows following popup

POPUP1:
Powerpoint found a problem with content in saved .pptx 
Powerpoint can attempt to repair the presentation
If you trust the source of this presentation,Click repair
(When I am clicking cancel it shows nothing)
when I am clicking repair,it shows another popup

POPUP2:
Powerpoint couldnt read some content in .pptx and removed it
click OK

I can observe following changes:
1. The superscripted "th" in the Title 25th April shows up wrong in PowerPoint
2. The distance from the bullet marker to the text is too large in Power point for the auto-sized bullets
3. Also in the exported version a copyright text shows up in the upper right corner that does not show up in the ODP original

(I am using MS Office 2016)


Thank you for reporting the bug. I can confirm that the bug is present in

Version: 6.2.1.2 (x64)
Build ID: 7bcb35dc3024a62dea0caee87020152d1ee96e71
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL


Version: 6.3.0.0.alpha0+ (x64)
Build ID: 91cdf22b88a4f7bec243c8fb187627e766d3294c
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-03-08_00:38:10
Locale: en-US (en_US); UI-Language: en-US
Calc: CL
Comment 4 Xisco Faulí 2019-05-23 10:45:34 UTC
(In reply to Xisco Faulí from comment #2)
> which version of MSO Powerpoint are you using ? I get a problem with content
> in MSO Powerpoint 2010...

Also reproduced in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

@Mark, I thought you might be interested in this issue...
Comment 5 Christian 2019-09-29 21:38:59 UTC
Any hope that this gets fixed ?
Comment 6 NISZ LibreOffice Team 2021-01-19 14:02:54 UTC
Created attachment 169014 [details]
Very simple reproducer document

Simple reproducer document for the superscript letters problem from 7.2 master.
Comment 7 NISZ LibreOffice Team 2021-01-19 14:03:20 UTC
Created attachment 169015 [details]
The reproducer document saved as PPTX
Comment 8 NISZ LibreOffice Team 2021-01-19 14:07:30 UTC
Created attachment 169016 [details]
The superscript characters properties in Impress and PP 2013

Looks like the characters relative font size setting is saved incorrectly so it becomes 14 000% instead of 58%.

Reopening in Impress this value is still 58%.
Comment 9 Commit Notification 2021-11-24 13:38:50 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/98fedbc8501b53a199afa4a879707bf89a7f84e5

tdf#124781 PPTX export: fix superscript and subscript positions

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 NISZ LibreOffice Team 2021-12-01 08:15:47 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4ac9032163cf55c160145373e7c41741c9c339ca
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL