tdf#124781 PPTX export: fix superscript and subscript position

The characters "Raise/lower by" setting is saved incorrectly when
the automatic checkbox is checked.

Change-Id: Ia7260504cde85e14867936c83eaf8735142e2c53