oox/source/export/drawingml.cxx
@@ -121,6 +121,7 @@
 #include <editeng/unonames.hxx>
 #include <editeng/unoprnms.hxx>
 #include <editeng/flditem.hxx>
+#include <editeng/escapementitem.hxx>
 #include <svx/svdoashp.hxx>
 #include <svx/svdomedia.hxx>
 #include <svx/unoapi.hxx>
@@ -1906,6 +1907,7 @@ void DrawingML::WriteRunProperties( const Reference< XPropertySet >& rRun, bool 
     sal_Int32 nSize = 1800;
     sal_Int32 nCharEscapement = 0;
     sal_Int32 nCharKerning = 0;
+    sal_Int32 nCharEscapementHeight = 0;
 
     if ( nElement == XML_endParaRPr && rbOverridingCharHeight )
     {
@@ -2059,12 +2061,27 @@ void DrawingML::WriteRunProperties( const Reference< XPropertySet >& rRun, bool 
         && eState == beans::PropertyState_DIRECT_VALUE)
         mAny >>= nCharEscapement;
 
-    if (nCharEscapement
-        && (GetPropertyAndState(rXPropSet, rXPropState, "CharEscapementHeight", eState)
-            && eState == beans::PropertyState_DIRECT_VALUE))
-    {
-        sal_uInt32 nCharEscapementHeight = 0;
+    if (GetPropertyAndState(rXPropSet, rXPropState, "CharEscapementHeight", eState)
+        && eState == beans::PropertyState_DIRECT_VALUE)
         mAny >>= nCharEscapementHeight;
+
+    if (DFLT_ESC_AUTO_SUPER == nCharEscapement)
+    {
+        // Raised by the differences between the ascenders (ascent = baseline to top of highest letter).
+        // The ascent is generally about 80% of the total font height.
+        // That is why DFLT_ESC_PROP (58) leads to 33% (DFLT_ESC_SUPER)
+        nCharEscapement = .8 * (100 - nCharEscapementHeight);
+    }
+    else if (DFLT_ESC_AUTO_SUB == nCharEscapement)
+    {
+        // Lowered by the differences between the descenders (descent = baseline to bottom of lowest letter).
+        // The descent is generally about 20% of the total font height.
+        // That is why DFLT_ESC_PROP (58) leads to 8% (DFLT_ESC_SUB)
+        nCharEscapement = .2 * -(100 - nCharEscapementHeight);
+    }
+
+    if (nCharEscapement && nCharEscapementHeight)
+    {
         nSize = (nSize * nCharEscapementHeight) / 100;
         // MSO uses default ~58% size
         nSize = (nSize / 0.58);
